--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <!-- Chao em -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document 2345</title>
 </head>
 <body>
     <h1>la em sao</h1>
