--- a/new.html
+++ b/new.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Chao em -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document 1234</title>
-</head>
-<body>
-    <h1>la em sao</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document 1234</title>
+        <!-- chao em nha  -->
+    </head>
+    <body>
+        <h1>la em sao</h1>
+    </body>
 </html>
