--- a/new.html
+++ b/new.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- nhanh 3 -->
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document 1234</title>
-        <!-- chao em nha  -->
+        
     </head>
     <body>
         <h1>la em sao</h1>
