--- a/new.html
+++ b/new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- nhanh 3 -->
+        <!-- nhanh 3 lan 2-->
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document 1234</title>
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>la em sao</h1>
+        <h2>lala</h2>
     </body>
 </html>
